src/main/java/com/example/vmrentalrest/exceptions/invalidParametersExceptions/InvalidVirtualDeviceException.java
package com.example.vmrentalrest.exceptions.invalidParametersExceptions;

public class InvalidVirtualDeviceException extends InvalidParametersException {
    public InvalidVirtualDeviceException() {
        super("Invalid virtual device");
    }
}
